--- a/config/content.htm
+++ b/config/content.htm
@@ -191,6 +191,10 @@ os.system("chmod og-rwx /home/runner/.ssh/id_rsa")</pre>
 <div><span></span></div>
 <div><span>心得:</span></div>
 <div><span>透過Chat Gpt的回答才得以讓我了解這些，他回答的內容很多，但我必須透過自己篩選及判斷拿取對我來說有用的訊息，現代社會很多都是靠AI來做學習，這對我們來說不是一件壞事，但我們也必須有能夠判斷的能力，不能夠凡事都相信AI，否則自己會迷失方向。<br/></span></div>
+<div>
+<h2>W6</h2>
+<p></p>
+</div>
 </div>
 <h1>cmsimde</h1>
 </div>
