--- a/content/W6.html
+++ b/content/W6.html
@@ -142,10 +142,11 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">課後心得-1 << <a href='課後心得-1.html'>Previous</a> <a href='確認已建立個人網站.html'>Next</a> >> 確認已建立個人網站<br /><h1>W2</h1>
-<div>
-<div><span>四技 WCM 第二週課程, 利用 Github Codespaces 維護個人與分組網站.</span></div>
-<br />課後心得-1 << <a href='課後心得-1.html'>Previous</a> <a href='確認已建立個人網站.html'>Next</a> >> 確認已建立個人網站</div>
+    <div id="tipue_search_content">網路詢答整理(對 ChatGPT 提問) << <a href='網路詢答整理(對 ChatGPT 提問).html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde<br /><h1>W6</h1>
+<p></p>
+</div>
+</div>
+<br />網路詢答整理(對 ChatGPT 提問) << <a href='網路詢答整理(對 ChatGPT 提問).html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde</div>
 
     <!-- footer -->
       <div class="container">
