--- a/content/Python 程式系統.html
+++ b/content/Python 程式系統.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='First.html'>First</a><li><a href='About.html'>About</a><li class='has-children'><a href='課程內容及課後心得.html'>課程內容及課後心得</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='登入 MS Online.html'>登入 MS Online</a><li><a href='Github 帳號.html'>Github 帳號</a><li><a href='課後心得-1.html'>課後心得-1</a></li></ul><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='確認已建立個人網站.html'>確認已建立個人網站</a><li><a href='利用Replit修改個人網站標題.html'>利用Replit修改個人網站標題</a><li><a href='利用 Codespaces 維護網站.html'>利用 Codespaces 維護網站</a><li><a href='心得-1.html'>心得-1</a></li></ul><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='利用 Github Classroom 分組.html'>利用 Github Classroom 分組</a><li><a href='利用 Github Codespaces 維護倉儲.html'>利用 Github Codespaces 維護倉儲</a><li><a href='常用的 git 指令.html'>常用的 git 指令</a><li><a href='心得-2.html'>心得-2</a></li></ul><li class='has-children'><a href='W4.html'>W4</a><ul class='dropdown'><li><a href='Replit 靜態網站檢視.html'>Replit 靜態網站檢視</a><li><a href='Replit 建立分組倉儲權限.html'>Replit 建立分組倉儲權限</a><li><a href='Replit, Codespaces 與 Gitpod 執行動態與靜態網站.html'>Replit, Codespaces 與 Gitpod 執行動態與靜態網站</a><li><a href='課後心得-2.html'>課後心得-2</a></li></ul><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='網路詢答整理(對 ChatGPT 提問).html'>網路詢答整理(對 ChatGPT 提問)</a></li></ul><li class='has-children'><a href='W6.html'>W6</a><ul class='dropdown'><li><a href='Git 歷史與希望解決的問題.html'>Git 歷史與希望解決的問題</a><li><a href='Git 如何解決產品設計問題.html'>Git 如何解決產品設計問題</a><li><a href='從 git init 到 git push.html'>從 git init 到 git push</a></li></ul><li class='has-children'><a href='W8.html'>W8</a><ul class='dropdown'><li><a href='從教育的本質看課程內容.html'>從教育的本質看課程內容</a><li><a href='心得-3.html'>心得-3</a></li></ul><li class='has-children'><a href='課程期中心得.html'>課程期中心得</a><ul class='dropdown'><li><a href='網頁式內容管理.html'>網頁式內容管理</a><li><a href='Python 程式系統.html'>Python 程式系統</a><li><a href='網頁上的 IDE.html'>網頁上的 IDE</a><li><a href='AI 工具.html'>AI 工具</a><li><a href='實作練習問題.html'>實作練習問題</a></li></li></ul></ul><li><a href='cmsimde.html'>cmsimde</a><li><a href='Codespaces.html'>Codespaces</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='First.html'>First</a><li><a href='About.html'>About</a><li class='has-children'><a href='課程內容及課後心得.html'>課程內容及課後心得</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='登入 MS Online.html'>登入 MS Online</a><li><a href='Github 帳號.html'>Github 帳號</a><li><a href='課後心得-1.html'>課後心得-1</a></li></ul><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='確認已建立個人網站.html'>確認已建立個人網站</a><li><a href='利用Replit修改個人網站標題.html'>利用Replit修改個人網站標題</a><li><a href='利用 Codespaces 維護網站.html'>利用 Codespaces 維護網站</a><li><a href='心得-1.html'>心得-1</a></li></ul><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='利用 Github Classroom 分組.html'>利用 Github Classroom 分組</a><li><a href='利用 Github Codespaces 維護倉儲.html'>利用 Github Codespaces 維護倉儲</a><li><a href='常用的 git 指令.html'>常用的 git 指令</a><li><a href='心得-2.html'>心得-2</a></li></ul><li class='has-children'><a href='W4.html'>W4</a><ul class='dropdown'><li><a href='Replit 靜態網站檢視.html'>Replit 靜態網站檢視</a><li><a href='Replit 建立分組倉儲權限.html'>Replit 建立分組倉儲權限</a><li><a href='Replit, Codespaces 與 Gitpod 執行動態與靜態網站.html'>Replit, Codespaces 與 Gitpod 執行動態與靜態網站</a><li><a href='課後心得-2.html'>課後心得-2</a></li></ul><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='網路詢答整理(對 ChatGPT 提問).html'>網路詢答整理(對 ChatGPT 提問)</a></li></ul><li class='has-children'><a href='W6.html'>W6</a><ul class='dropdown'><li><a href='Git 歷史與希望解決的問題.html'>Git 歷史與希望解決的問題</a><li><a href='Git 如何解決產品設計問題.html'>Git 如何解決產品設計問題</a><li><a href='從 git init 到 git push.html'>從 git init 到 git push</a></li></ul><li class='has-children'><a href='W8.html'>W8</a><ul class='dropdown'><li><a href='從教育的本質看課程內容.html'>從教育的本質看課程內容</a><li><a href='心得-3.html'>心得-3</a></li></ul><li class='has-children'><a href='課程期中心得.html'>課程期中心得</a><ul class='dropdown'><li><a href='網頁式內容管理.html'>網頁式內容管理</a><li><a href='Python 程式系統.html'>Python 程式系統</a><li><a href='網頁上的 IDE.html'>網頁上的 IDE</a><li><a href='AI 工具.html'>AI 工具</a></li></li></ul></ul><li><a href='cmsimde.html'>cmsimde</a><li><a href='Codespaces.html'>Codespaces</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -143,7 +143,63 @@ img.add_border {
 
         </header>
     <div id="tipue_search_content">網頁式內容管理 << <a href='網頁式內容管理.html'>Previous</a> <a href='網頁上的 IDE.html'>Next</a> >> 網頁上的 IDE<br /><h1>Python 程式系統</h1>
-<p><span></span></p>
+<div><span>Q1:如何利用電腦輔助設計室的舊 Python 建立新的可攜環境?</span></div>
+<br/>
+<div><span>要利用 Python 建立新的可攜環境（portable environment），通常可以使用虛擬環境（virtual environment）的概念來達成。這樣可以隔離和管理不同專案或需求所使用的 Python 庫和依賴。</span></div>
+<br/>
+<div><span>步驟 1: 安裝 Python</span></div>
+<br/>
+<div><span>步驟 2: 安裝虛擬環境工具</span></div>
+<br/>
+<div><span>步驟 3: 創建新的虛擬環境</span></div>
+<br/>
+<div><span>步驟 4: 啟動虛擬環境</span></div>
+<br/>
+<div><span>步驟 5: 安裝所需的 Python 庫</span></div>
+<br/>
+<div><span>這樣，你就可以在不同的專案中使用不同的虛擬環境，每個環境都有其獨立的庫和依賴，從而保持環境的乾淨和管理的便利性。</span></div>
+<br/>
+<div><span>Q2:在網頁中置入 Python 語法的程式加上對 Javascript 與超文件語法的了解後, 能夠應用在那些領域?</span></div>
+<br/>
+<div><span>網頁開發與後端連接：</span></div>
+<div><span>在網頁前端中使用JavaScript來處理用戶互動和動態效果，同時利用Python來處理後端邏輯、數據處理和業務邏輯。這種結合可以實現豐富的用戶體驗和高效的服務端處理。</span></div>
+<br/>
+<div><span>數據分析與可視化：</span></div>
+<div><span>Python在數據科學和分析領域有著廣泛的應用，能夠處理大量的數據和進行複雜的分析。將Python的數據處理程式碼嵌入到網頁中，結合JavaScript的圖表庫如D3.js或Chart.js，可以實現數據的動態可視化，用於報表展示或者交互式數據探索。</span></div>
+<br/>
+<div><span>自動化工具與網頁應用：</span></div>
+<div><span>使用Python來開發自動化工具，例如網頁爬蟲、數據處理腳本等，這些工具可以在後端運行並與前端網頁交互。例如，用Python編寫的爬蟲程序可以收集數據，然後用JavaScript在網頁上顯示和處理這些數據。</span></div>
+<br/>
+<div><span>網站的後端開發：</span></div>
+<div><span>使用Python來構建網站的後端，處理用戶的請求和業務邏輯，並與前端JavaScript進行通信。流行的Python框架如Django和Flask提供了強大的後端開發能力，能夠與前端進行無縫集成。</span></div>
+<br/>
+<div><span>教育和學習平台：</span></div>
+<div><span>在教育和學習平台中，可以利用Python來實現互動式教學內容或者練習。將Python代碼嵌入到網頁中，讓學生能夠直接在瀏覽器中運行並查看結果，這樣有助於提升學習效率和實踐能力。</span></div>
+<br/>
+<div><span>總結來說，將Python語法與JavaScript和HTML結合，可以在網頁開發、數據分析與可視化、自動化工具開發、網站後端構建以及教育學習平台等多個領域發揮重要作用，這樣的結合能夠充分利用各種語言的優勢，為不同應用場景提供最佳的解決方案。</span></div>
+<br/>
+<div><span>Q3:(精密)機械設計流程?</span></div>
+<br/>
+<div><span>1.</span><span> 需求分析和定義</span></div>
+<div><span>2.</span><span> 概念設計</span></div>
+<div><span>3.</span><span> 詳細設計</span></div>
+<div><span>4.</span><span> CAD 建模和分析</span></div>
+<div><span>5.</span><span> 試製和測試</span></div>
+<div><span>6.</span><span> 產品改進和最終設計確定</span></div>
+<div><span>7.</span><span> 生產和驗證</span></div>
+<div><span>8.</span><span> 上市和後期支持</span></div>
+<br/>
+<div><span>Q4:設計運算?</span></div>
+<br/>
+<div><span>"設計運算"是指利用計算機科學和信息技術的方法來支持和增強設計過程的過程和方法。它涉及到將計算機科學的算法、數據結構、數學模型和編程技術應用於設計領域，以解決複雜的設計問題和優化設計過程。</span></div>
+<br/>
+<div><span>1.數字化設計工具：</span></div>
+<div><span>2.參數化設計和自動化：</span></div>
+<br/>
+<div><span>Q5:特定系統模擬?</span></div>
+<br/>
+<div><span>特定系統模擬指的是專門針對某一特定系統或設備進行的模擬和仿真過程。這種模擬通常旨在評估系統的性能、行為、效率或其他特定屬性，以便於設計改進、決策支持或問題解決。這些模擬可以涵蓋各種不同的領域和應用。</span></div>
+<br/>
 <br />網頁式內容管理 << <a href='網頁式內容管理.html'>Previous</a> <a href='網頁上的 IDE.html'>Next</a> >> 網頁上的 IDE</div>
 
     <!-- footer -->
