--- a/content/網頁上的 IDE.html
+++ b/content/網頁上的 IDE.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='First.html'>First</a><li><a href='About.html'>About</a><li class='has-children'><a href='課程內容及課後心得.html'>課程內容及課後心得</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='登入 MS Online.html'>登入 MS Online</a><li><a href='Github 帳號.html'>Github 帳號</a><li><a href='課後心得-1.html'>課後心得-1</a></li></ul><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='確認已建立個人網站.html'>確認已建立個人網站</a><li><a href='利用Replit修改個人網站標題.html'>利用Replit修改個人網站標題</a><li><a href='利用 Codespaces 維護網站.html'>利用 Codespaces 維護網站</a><li><a href='心得-1.html'>心得-1</a></li></ul><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='利用 Github Classroom 分組.html'>利用 Github Classroom 分組</a><li><a href='利用 Github Codespaces 維護倉儲.html'>利用 Github Codespaces 維護倉儲</a><li><a href='常用的 git 指令.html'>常用的 git 指令</a><li><a href='心得-2.html'>心得-2</a></li></ul><li class='has-children'><a href='W4.html'>W4</a><ul class='dropdown'><li><a href='Replit 靜態網站檢視.html'>Replit 靜態網站檢視</a><li><a href='Replit 建立分組倉儲權限.html'>Replit 建立分組倉儲權限</a><li><a href='Replit, Codespaces 與 Gitpod 執行動態與靜態網站.html'>Replit, Codespaces 與 Gitpod 執行動態與靜態網站</a><li><a href='課後心得-2.html'>課後心得-2</a></li></ul><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='網路詢答整理(對 ChatGPT 提問).html'>網路詢答整理(對 ChatGPT 提問)</a></li></ul><li class='has-children'><a href='W6.html'>W6</a><ul class='dropdown'><li><a href='Git 歷史與希望解決的問題.html'>Git 歷史與希望解決的問題</a><li><a href='Git 如何解決產品設計問題.html'>Git 如何解決產品設計問題</a><li><a href='從 git init 到 git push.html'>從 git init 到 git push</a></li></ul><li class='has-children'><a href='W8.html'>W8</a><ul class='dropdown'><li><a href='從教育的本質看課程內容.html'>從教育的本質看課程內容</a><li><a href='心得-3.html'>心得-3</a></li></ul><li class='has-children'><a href='課程期中心得.html'>課程期中心得</a><ul class='dropdown'><li><a href='網頁式內容管理.html'>網頁式內容管理</a><li><a href='Python 程式系統.html'>Python 程式系統</a><li><a href='網頁上的 IDE.html'>網頁上的 IDE</a><li><a href='AI 工具.html'>AI 工具</a><li><a href='實作練習問題.html'>實作練習問題</a></li></li></ul></ul><li><a href='cmsimde.html'>cmsimde</a><li><a href='Codespaces.html'>Codespaces</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='First.html'>First</a><li><a href='About.html'>About</a><li class='has-children'><a href='課程內容及課後心得.html'>課程內容及課後心得</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='登入 MS Online.html'>登入 MS Online</a><li><a href='Github 帳號.html'>Github 帳號</a><li><a href='課後心得-1.html'>課後心得-1</a></li></ul><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='確認已建立個人網站.html'>確認已建立個人網站</a><li><a href='利用Replit修改個人網站標題.html'>利用Replit修改個人網站標題</a><li><a href='利用 Codespaces 維護網站.html'>利用 Codespaces 維護網站</a><li><a href='心得-1.html'>心得-1</a></li></ul><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='利用 Github Classroom 分組.html'>利用 Github Classroom 分組</a><li><a href='利用 Github Codespaces 維護倉儲.html'>利用 Github Codespaces 維護倉儲</a><li><a href='常用的 git 指令.html'>常用的 git 指令</a><li><a href='心得-2.html'>心得-2</a></li></ul><li class='has-children'><a href='W4.html'>W4</a><ul class='dropdown'><li><a href='Replit 靜態網站檢視.html'>Replit 靜態網站檢視</a><li><a href='Replit 建立分組倉儲權限.html'>Replit 建立分組倉儲權限</a><li><a href='Replit, Codespaces 與 Gitpod 執行動態與靜態網站.html'>Replit, Codespaces 與 Gitpod 執行動態與靜態網站</a><li><a href='課後心得-2.html'>課後心得-2</a></li></ul><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='網路詢答整理(對 ChatGPT 提問).html'>網路詢答整理(對 ChatGPT 提問)</a></li></ul><li class='has-children'><a href='W6.html'>W6</a><ul class='dropdown'><li><a href='Git 歷史與希望解決的問題.html'>Git 歷史與希望解決的問題</a><li><a href='Git 如何解決產品設計問題.html'>Git 如何解決產品設計問題</a><li><a href='從 git init 到 git push.html'>從 git init 到 git push</a></li></ul><li class='has-children'><a href='W8.html'>W8</a><ul class='dropdown'><li><a href='從教育的本質看課程內容.html'>從教育的本質看課程內容</a><li><a href='心得-3.html'>心得-3</a></li></ul><li class='has-children'><a href='課程期中心得.html'>課程期中心得</a><ul class='dropdown'><li><a href='網頁式內容管理.html'>網頁式內容管理</a><li><a href='Python 程式系統.html'>Python 程式系統</a><li><a href='網頁上的 IDE.html'>網頁上的 IDE</a><li><a href='AI 工具.html'>AI 工具</a></li></li></ul></ul><li><a href='cmsimde.html'>cmsimde</a><li><a href='Codespaces.html'>Codespaces</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -143,7 +143,28 @@ img.add_border {
 
         </header>
     <div id="tipue_search_content">Python 程式系統 << <a href='Python 程式系統.html'>Previous</a> <a href='AI 工具.html'>Next</a> >> AI 工具<br /><h1>網頁上的 IDE</h1>
-<p><span></span></p>
+<div><span>IDE 是甚麼? </span></div>
+<br/>
+<div><span>它是一種軟體應用程序，旨在為軟體開發人員提供一個集成的工作環境，以便在其中進行軟體開發、測試、除錯和部署。IDE 提供了多種工具和功能，使開發過程更加高效和便捷。</span></div>
+<br/>
+<div><span>編輯器：</span></div>
+<div><span>提供代碼編輯功能，包括語法高亮、自動完成、代碼折疊等，以幫助開發人員編寫和維護代碼。</span></div>
+<div><span>除錯器：</span></div>
+<div><span>集成了除錯工具，支持在開發過程中檢測和修復代碼中的錯誤和異常。</span></div>
+<div><span>編譯器/解釋器：</span></div>
+<div><span>支持將代碼編譯成可執行文件或者通過解釋器執行，並提供相應的編譯或執行設置。</span></div>
+<div><span>自動化工具：</span></div>
+<div><span>集成了自動化工具，如自動化構建（Build）、版本控制（Version Control）、測試工具等，幫助開發團隊更有效地管理項目和進行版本控制。</span></div>
+<div><span>集成開發：</span></div>
+<div><span>整合了多種開發所需的工具和資源，如文檔、教程、第三方庫、插件等，提供一站式的開發解決方案。</span></div>
+<div><span>專案管理：</span></div>
+<div><span>提供專案管理功能，能夠組織和管理多個項目文件、資源和代碼庫。</span></div>
+<br/>
+<div><span>可以將 Replit、Codespaces 與 Gitpod 當成 IDE 用來開發各種程式嗎? </span></div>
+<br/>
+<div><span>與近端操作系統上的開發有何不同?</span></div>
+<br/>
+<div><span>多人協同這樣安全嗎? </span></div>
 <br />Python 程式系統 << <a href='Python 程式系統.html'>Previous</a> <a href='AI 工具.html'>Next</a> >> AI 工具</div>
 
     <!-- footer -->
