--- a/content/網頁式內容管理.html
+++ b/content/網頁式內容管理.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='First.html'>First</a><li><a href='About.html'>About</a><li class='has-children'><a href='課程內容及課後心得.html'>課程內容及課後心得</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='登入 MS Online.html'>登入 MS Online</a><li><a href='Github 帳號.html'>Github 帳號</a><li><a href='課後心得-1.html'>課後心得-1</a></li></ul><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='確認已建立個人網站.html'>確認已建立個人網站</a><li><a href='利用Replit修改個人網站標題.html'>利用Replit修改個人網站標題</a><li><a href='利用 Codespaces 維護網站.html'>利用 Codespaces 維護網站</a><li><a href='心得-1.html'>心得-1</a></li></ul><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='利用 Github Classroom 分組.html'>利用 Github Classroom 分組</a><li><a href='利用 Github Codespaces 維護倉儲.html'>利用 Github Codespaces 維護倉儲</a><li><a href='常用的 git 指令.html'>常用的 git 指令</a><li><a href='心得-2.html'>心得-2</a></li></ul><li class='has-children'><a href='W4.html'>W4</a><ul class='dropdown'><li><a href='Replit 靜態網站檢視.html'>Replit 靜態網站檢視</a><li><a href='Replit 建立分組倉儲權限.html'>Replit 建立分組倉儲權限</a><li><a href='Replit, Codespaces 與 Gitpod 執行動態與靜態網站.html'>Replit, Codespaces 與 Gitpod 執行動態與靜態網站</a><li><a href='課後心得-2.html'>課後心得-2</a></li></ul><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='網路詢答整理(對 ChatGPT 提問).html'>網路詢答整理(對 ChatGPT 提問)</a></li></ul><li class='has-children'><a href='W6.html'>W6</a><ul class='dropdown'><li><a href='Git 歷史與希望解決的問題.html'>Git 歷史與希望解決的問題</a><li><a href='Git 如何解決產品設計問題.html'>Git 如何解決產品設計問題</a><li><a href='從 git init 到 git push.html'>從 git init 到 git push</a></li></ul><li class='has-children'><a href='W8.html'>W8</a><ul class='dropdown'><li><a href='從教育的本質看課程內容.html'>從教育的本質看課程內容</a><li><a href='心得-3.html'>心得-3</a></li></ul><li class='has-children'><a href='課程期中心得.html'>課程期中心得</a><ul class='dropdown'><li><a href='網頁式內容管理.html'>網頁式內容管理</a><li><a href='Python 程式系統.html'>Python 程式系統</a><li><a href='網頁上的 IDE.html'>網頁上的 IDE</a><li><a href='AI 工具.html'>AI 工具</a><li><a href='實作練習問題.html'>實作練習問題</a></li></li></ul></ul><li><a href='cmsimde.html'>cmsimde</a><li><a href='Codespaces.html'>Codespaces</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='First.html'>First</a><li><a href='About.html'>About</a><li class='has-children'><a href='課程內容及課後心得.html'>課程內容及課後心得</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='登入 MS Online.html'>登入 MS Online</a><li><a href='Github 帳號.html'>Github 帳號</a><li><a href='課後心得-1.html'>課後心得-1</a></li></ul><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='確認已建立個人網站.html'>確認已建立個人網站</a><li><a href='利用Replit修改個人網站標題.html'>利用Replit修改個人網站標題</a><li><a href='利用 Codespaces 維護網站.html'>利用 Codespaces 維護網站</a><li><a href='心得-1.html'>心得-1</a></li></ul><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='利用 Github Classroom 分組.html'>利用 Github Classroom 分組</a><li><a href='利用 Github Codespaces 維護倉儲.html'>利用 Github Codespaces 維護倉儲</a><li><a href='常用的 git 指令.html'>常用的 git 指令</a><li><a href='心得-2.html'>心得-2</a></li></ul><li class='has-children'><a href='W4.html'>W4</a><ul class='dropdown'><li><a href='Replit 靜態網站檢視.html'>Replit 靜態網站檢視</a><li><a href='Replit 建立分組倉儲權限.html'>Replit 建立分組倉儲權限</a><li><a href='Replit, Codespaces 與 Gitpod 執行動態與靜態網站.html'>Replit, Codespaces 與 Gitpod 執行動態與靜態網站</a><li><a href='課後心得-2.html'>課後心得-2</a></li></ul><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='網路詢答整理(對 ChatGPT 提問).html'>網路詢答整理(對 ChatGPT 提問)</a></li></ul><li class='has-children'><a href='W6.html'>W6</a><ul class='dropdown'><li><a href='Git 歷史與希望解決的問題.html'>Git 歷史與希望解決的問題</a><li><a href='Git 如何解決產品設計問題.html'>Git 如何解決產品設計問題</a><li><a href='從 git init 到 git push.html'>從 git init 到 git push</a></li></ul><li class='has-children'><a href='W8.html'>W8</a><ul class='dropdown'><li><a href='從教育的本質看課程內容.html'>從教育的本質看課程內容</a><li><a href='心得-3.html'>心得-3</a></li></ul><li class='has-children'><a href='課程期中心得.html'>課程期中心得</a><ul class='dropdown'><li><a href='網頁式內容管理.html'>網頁式內容管理</a><li><a href='Python 程式系統.html'>Python 程式系統</a><li><a href='網頁上的 IDE.html'>網頁上的 IDE</a><li><a href='AI 工具.html'>AI 工具</a></li></li></ul></ul><li><a href='cmsimde.html'>cmsimde</a><li><a href='Codespaces.html'>Codespaces</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -143,7 +143,111 @@ img.add_border {
 
         </header>
     <div id="tipue_search_content">課程期中心得 << <a href='課程期中心得.html'>Previous</a> <a href='Python 程式系統.html'>Next</a> >> Python 程式系統<br /><h1>網頁式內容管理</h1>
-<p><span></span></p>
+<div><span>Q1:如何建立 Github 上的網站?</span></div>
+<br/>
+<div><span>A1: GitHub 上建立網站可以使用 GitHub Pages ，先創立一個儲存庫，名稱為username.github.io，在存儲庫中創建一個名為「index.html」的 HTML 文件，用於構建你的網站主頁。將網站的代碼添加到 index.html 文件中，然後把它推到 GitHub 存儲庫。</span></div>
+<br/>
+<div><span>Q2:如何管理內容?</span></div>
+<br/>
+<div><span>A2: GitHub 上管理網站內容通常使用版本控制工具 Git。可以在本地創建一個 Git 存儲庫，將網站代碼下載到本地，然後在本地修改和更新網站內容。完成修改後，使用 Git 將更改推送到 GitHub 存儲庫。另外，可以使用分支（Branches）來開發新功能或進行實驗，然後將分支合併（Merge）到主分支（通常是 master 或 main）中。</span></div>
+<br/>
+<div><span>Q3: 如何建立章節式網站?</span></div>
+<br/>
+<div><span>A3:建立章節式網站可以使用靜態網站生成器，如Replit、Codespaces或Gitpods等。首先，需要選擇一個適合你需求的生成器，然後在本地開發環境中創建你的網站再使用生成器提供的模板和功能來創建不同的章節和內容頁面，組織你的網站內容。完成編輯後，使用生成器將網站生成為靜態文件，然後將這些文件推送到GitHub存儲庫中。最後，你的章節式網站將通過GitHub Pages或其他靜態網站托管服務進行部署，讓其他人可以訪問和瀏覽你的網站。</span></div>
+<br/>
+<div><span>Q4:能放入甚麼多媒體內容?</span></div>
+<br/>
+<div><span>A4:</span></div>
+<br/>
+<div><span>1.圖片:嵌入YouTube、Vimeo等視頻平台提供的影片連結，或者將視頻文件直接嵌入到網頁中，讓讀者可以觀看視頻內容。</span></div>
+<br/>
+<div><span>2.影片:嵌入YouTube、Vimeo等視頻平台提供的影片連結，或者將視頻文件直接嵌入到網頁中，讓讀者可以觀看視頻內容。</span></div>
+<br/>
+<div><span>3.音頻:嵌入音樂或語音文件，如Podcast等，讓讀者可以聆聽音頻內容。</span></div>
+<br/>
+<div><span>4.地圖:嵌入地圖服務，如Google Maps，以展示地理位置或路線信息。</span></div>
+<br/>
+<div><span>5.表格:使用HTML或Markdown格式來創建和展示表格內容，以整理和呈現數據。</span></div>
+<br/>
+<div><span>6.圖表和圖形:使用JavaScript圖表庫或其他數據可視化工具來創建和展示圖表和圖形，以呈現數據和統計信息。</span></div>
+<br/>
+<div><span>7.放入網站:嵌入其他網站提供的媒體內容，如Twitter貼文、Instagram照片等，以擴展你的內容範圍。</span></div>
+<br/>
+<div><span>Q5:靜態圖文?</span></div>
+<br/>
+<div><span>A5:</span></div>
+<br/>
+<div><span>1.圖片:將圖片文件直接插入到章節內容中。你可以使用HTML的 </span><span>&lt;img&gt;</span><span> 標籤或Markdown的圖片語法（例如 ![</span><span>圖片描述</span><span>](</span><span>圖片URL</span><span>)）來添加圖片。</span></div>
+<br/>
+<div><span>2.文本:使用Markdown或HTML來編寫文本內容，包括標題、段落、列表等。Markdown提供了簡單易讀的語法，而HTML則提供更多的自定義和控制。</span></div>
+<br/>
+<div><span>3.超連結:使用超連結來連接不同章節或其他網站。在HTML中，你可以使用 </span><span>&lt;a&gt;</span><span> 標籤來創建超連結，而Markdown則提供了 [</span><span>連結文字</span><span>](</span><span>連結URL</span><span>) 的語法。</span></div>
+<br/>
+<div><span>4.引用:引用其他資料或文字也是常見的做法。你可以使用Markdown的引用語法（&gt; 引用文字）或HTML的 </span><span>&lt;blockquote&gt;</span><span> 標籤來添加引用內容。</span></div>
+<br/>
+<div><span>Q6:動態圖文?</span></div>
+<br/>
+<div><span>A6:</span></div>
+<br/>
+<div><span>1.動畫:使用CSS或JavaScript來創建和控制動畫效果，使圖片、文本或其他元素呈現動態效果。你可以使用CSS的 @keyframes 樣式或JavaScript的動畫庫（如Animate.css）來添加動畫。</span></div>
+<br/>
+<div><span>Q7:線上遊戲?</span></div>
+<br/>
+<div><span>A7:</span></div>
+<br/>
+<div><span>1.使用嵌入式代碼:將線上遊戲的嵌入代碼（embed code）添加到你的網站中。許多線上遊戲提供了嵌入代碼，你只需將其添加到網站的HTML中的相應位置即可。</span></div>
+<br/>
+<div><span>2.使用iframe元素:使用HTML的 </span><span>&lt;iframe&gt;</span><span> 元素來嵌入線上遊戲。你可以將遊戲的URL添加到 </span><span>&lt;iframe&gt;</span><span> 元素的 src 屬性中，然後將 </span><span>&lt;iframe&gt;</span><span> 元素添加到你的網站中的任何位置。</span></div>
+<br/>
+<div><span>補充:</span><span>&lt;iframe&gt;</span><span> 元素是HTML中的一個標記，用於在網頁中嵌入另一個獨立的HTML文檔或外部網頁。它提供了一種在當前網頁中包含其他網頁內容的方法，讓你可以將其他網站的內容嵌入到網頁中，或者在同一網站中的不同頁面之間嵌入內容。</span></div>
+<br/>
+<div><span>&lt;iframe&gt;</span><span> 元素有一個 src 屬性，用於指定要嵌入的外部文檔或網頁的URL。除此之外，還可以設置其他屬性來調整iframe的大小、邊框、樣式等。通過iframe，你可以在網頁中創建內嵌的互動元素，如Google地圖、YouTube視頻、線上遊戲等，為網站提供更豐富的內容和功能。</span></div>
+<br/>
+<div><span>3.設置遊戲頁面:在網站中創建一個專門的遊戲頁面，將遊戲嵌入到該頁面中。這樣做可以使遊戲與網站的其他內容分開，並為用戶提供更好的遊戲體驗。</span></div>
+<br/>
+<div><span>4.安全性:確保嵌入的遊戲代碼來源可信，以防止可能的安全風險。如果可能的話，最好使用來自可靠和信任的遊戲提供商的嵌入代碼。</span></div>
+<br/>
+<div><span>Q8:3D 零組件展示?</span></div>
+<br/>
+<div><span>A8:</span></div>
+<br/>
+<div><span>1.使用Javascript 3D庫:使用像Three.js這樣的JavaScript 3D庫，可以輕鬆在網站中展示3D零組件。你可以將3D模型導入到你的網站中，並使用Three.js等庫來渲染和顯示它們。這樣的庫通常提供了各種功能，如照明、動畫、交互等，以增強3D模型的表現力。</span></div>
+<br/>
+<div><span>2.使用網頁GL視窗:利用WebGL技術，你可以在網頁中嵌入可交互的3D場景。這需要一些較高級的編程知識，但它可以讓你在網頁中直接渲染3D模型，使它們能夠與用戶互動。</span></div>
+<br/>
+<div><span>3.嵌入式3D查看器:使用嵌入式3D查看器，如Sketchfab，可以將3D模型嵌入到你的網站中。Sketchfab提供了一個簡單的嵌入代碼，你可以將它添加到你的網站中，以便在線上展示和互動3D模型。</span></div>
+<br/>
+<div><span>Q9:如何建立網頁系統中的網誌?</span></div>
+<br/>
+<div><span>A9:步驟</span></div>
+<br/>
+<div><span>1.選擇網誌平台</span></div>
+<br/>
+<div><span>2.設置網誌</span></div>
+<br/>
+<div><span>3.編輯內容</span></div>
+<br/>
+<div><span>4.發布文章</span></div>
+<br/>
+<div><span>5.促進網誌</span></div>
+<br/>
+<div><span>6.定期更新</span></div>
+<br/>
+<div><span>Q10:如何建立網頁系統中的簡報?</span></div>
+<br/>
+<div><span>A10:步驟</span></div>
+<br/>
+<div><span>1.選擇簡報工具</span></div>
+<br/>
+<div><span>2.建立簡報</span></div>
+<br/>
+<div><span>3.增加內容</span></div>
+<br/>
+<div><span>4.設置轉場效果</span></div>
+<br/>
+<div><span>5.編輯和分享</span></div>
+<br/>
+<div><span>6.儲存</span></div>
 <br />課程期中心得 << <a href='課程期中心得.html'>Previous</a> <a href='Python 程式系統.html'>Next</a> >> Python 程式系統</div>
 
     <!-- footer -->
